[package]
name = "dnp3"
version = "1.6.0"

authors = ["Step Function I/O LLC <info@stepfunc.io>"]
description = "Rust implementation of DNP3 (IEEE 1815) with idiomatic bindings for C, C++, .NET, and Java"
readme = "README.md"
exclude = ["codegen"] # the scala code used to generate parts of the crate

# inherit from workspace
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]

[dev-dependencies]
assert_matches = "1.2"
clap = { version = "4.0", features = ["derive"] }
futures = { version = "0.3.24" }
rand = "0.8"
serde_json = "1.0.96"
sfio-tokio-mock-io = "0.2.0"
tokio = { version = "1", features = ["test-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1.1" }
tracing-subscriber = "0.3"



[features]
default = ["tls", "serial"]
ffi = [] # this feature flag is only used when building the FFI
tls = ["sfio-rustls-config", "tokio-rustls"]
serial = ["tokio-serial"]
# Public configuration types dervie both serde::Deserialize and serde::Serialize
serialization = ["serde"]
