[package]
name = "dnp3-ffi"
version = "1.6.0"

# inherit from workspace
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]

[features]
default = ["tls", "serial"]
tls = ["dnp3/tls"]
serial = ["dnp3/serial"]

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = { workspace = true }
sfio-tracing-ffi = {  workspace = true  }
sfio-tokio-ffi = {  workspace = true  }